[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Joshua Smeda <smeda.josh14@gmail.com>"]
description = ""
name = "tarkov-scrappy"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.7.3"
fnmatch2 = "^0.0.8"
python = "^3.8"
Flask = "^2.0.2"
[tool.poetry.dev-dependencies]
